# dcrypt

./: BENCHMARKS.md  Cargo.toml  README.md
crates/algorithms/: Cargo.toml  README.md
crates/algorithms/examples/: no_std_usage.rs  primitives_basic_usage.rs  type_system.rs
crates/algorithms/src/ec/b283k/: field.rs  point.rs
crates/algorithms/src/ec/k256/: field.rs  point.rs
crates/algorithms/src/ec/p256/: field.rs  point.rs
crates/algorithms/src/ec/p384/: field.rs  point.rs
crates/algorithms/src/mac/: mod.rs
crates/algorithms/src/operation/: mod.rs
crates/algorithms/src/poly/fft/: mod.rs
crates/algorithms/src/poly/ntt/: mod.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: lib.rs  types.rs
crates/api/src/traits/: mod.rs
crates/common/: Cargo.toml  README.md
crates/common/src/: lib.rs
crates/hybrid/: Cargo.toml  README.md
crates/hybrid/benches/: figure_14_workflow.rs  hybrid_kem.rs  hybrid_sign.rs
crates/hybrid/src/: lib.rs
crates/hybrid/src/sign/: ecdsa_dilithium.rs  rsa_falcon.rs
crates/internal/: README.md
crates/internal/src/: lib.rs  mod.rs
crates/kem/: Cargo.toml  README.md
crates/kem/benches/: ecdh_comparison.rs
crates/kem/src/ecdh/b283k/: mod.rs
crates/kem/src/ecdh/k256/: mod.rs
crates/kem/src/ecdh/p256/: mod.rs
crates/kem/src/ecdh/p384/: mod.rs
crates/kem/src/ecdh/p521/: mod.rs
crates/kem/src/mceliece/: mod.rs
crates/params/: README.md
crates/params/src/: lib.rs
crates/params/src/utils/: mod.rs
crates/pke/: Cargo.toml  README.md
crates/pke/src/: lib.rs
crates/pke/src/traits/: mod.rs
crates/sign/: Cargo.toml  README.md
crates/sign/src/dilithium/: sign.rs
crates/sign/src/falcon/: mod.rs
crates/sign/src/rainbow/: mod.rs
crates/sign/src/sphincs/: mod.rs
crates/symmetric/: Cargo.toml  README.md
crates/symmetric/src/: lib.rs
crates/symmetric/src/aead/chacha20poly1305/: common.rs
crates/symmetric/src/aead/gcm/: types.rs
crates/symmetric/src/aes/: keys.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: data_conversion.rs  lib.rs
docs/: README.md
docs/algorithms/operation/: README.md
docs/algorithms/types/: README.md
docs/api/error/: README.md
docs/api/traits/: README.md
docs/api/types/: README.md
docs/common/security/: README.md
docs/params/pqc/: README.md
docs/pke/error/: README.md
docs/symmetric/aead/: README.md
docs/symmetric/aes/: README.md
docs/symmetric/error/: README.md
docs/tests/: README.md
tests/: Cargo.toml  README.md
tests/src/: lib.rs
tests/src/suites/constant_time/: config.rs  mod.rs  profile.rs  stats.rs  tester.rs
tests/tests/constant_time/: aead_tests.rs  block_cipher_tests.rs  dilithium.rs  ecdh.rs  hash_tests.rs  hybrid.rs  kyber.rs  mac_tests.rs  mod.rs  stream_tests.rs  xof_tests.rs
tests/tests/constant_time/kdf/argon2/: mod.rs
tests/tests/constant_time/kdf/hkdf/: mod.rs
tests/tests/constant_time/kdf/pbkdf2/: mod.rs
