[package]
name = "dcrypt-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Testing utilities and benchmarks for the DCRYPT library"
repository.workspace = true
license.workspace = true

[dependencies]
dcrypt-kem = { path = "../crates/kem", version = "=1.0.0" }
dcrypt-sign = { path = "../crates/sign", version = "=1.0.0" }
dcrypt-algorithms = { path = "../crates/algorithms", version = "=1.0.0" }
dcrypt-params = { path = "../crates/params", version = "=1.0.0" }
dcrypt-symmetric = { path = "../crates/symmetric", version = "=1.0.0" }
dcrypt-hybrid = { path = "../crates/hybrid", version = "=1.0.0" }
dcrypt-api = { version = "=1.0.0", path = "../crates/api" }
dcrypt-common = { path = "../crates/common" , version = "=1.0.0" }
dcrypt-internal = { path = "../crates/internal" , version = "=1.0.0" }
rand = { workspace = true }
rand_chacha = { workspace = true }
statrs = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
once_cell = "1"
hex = "0.4"
thiserror = "1"
arrayref = "0.3"
subtle = "2"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[package.metadata.release]
publish = false
