[package]
name = "dcrypt-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Public API traits and types for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = true 

[features]
default = ["std"]
std = ["thiserror", "zeroize/std", "alloc"]
alloc = []
no_std = []
serde = ["dep:serde"]

[dependencies]
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }
thiserror = { version = "1.0.37", optional = true }
subtle = { version = "2.4.1" }
serde = { version = "1.0.147", features = ["derive"], optional = true }
rand = { version = "0.8.5", optional = false }
dcrypt-internal = { path = "../internal", version = "=1.0.0" }

[dev-dependencies]
rand = { version = "0.8.5" }

[package.metadata.release]
publish = true
