[package]
name = "dcrypt-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Common implementations and shared functionality for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = true

[features]
default = ["std"]
std = ["thiserror", "zeroize/std", "alloc"]
alloc = []
no_std = []
serde = ["dep:serde"]

[dependencies]
zeroize = { version = "1.5.7", features = ["zeroize_derive"] }
thiserror = { version = "1.0.37", optional = true }
subtle = { version = "2.4.1" }
serde = { version = "1.0.147", features = ["derive"], optional = true }
rand = { version = "0.8.5", optional = false }
dcrypt-internal = { path = "../internal", version = "=1.0.1" }
dcrypt-api = { path = "../api", version = "=1.0.1" }

[dev-dependencies]
rand = { version = "0.8.5" }

[package.metadata.release]
publish = true
