[package]
name = "dcrypt-hybrid"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hybrid cryptography schemes for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = true

[features]
default = ["std"]
std = [
    "dcrypt-api/std", 
    "dcrypt-common/std", 
    "dcrypt-internal/std",
    "alloc"
]
alloc = []
no_std = [
    "dcrypt-api/no_std", 
    "dcrypt-common/no_std", 
    "dcrypt-internal/no_std",
    "alloc"
]
serde = [
    "dep:serde", 
    "dcrypt-api/serde", 
    "dcrypt-common/serde"
]


[dependencies]
dcrypt-api = { path = "../api", version = "=1.0.1", default-features = false }
dcrypt-common = { path = "../common", version = "=1.0.1", default-features = false }
dcrypt-internal = { path = "../internal", version = "=1.0.1", default-features = false }
dcrypt-params = { path = "../params", version = "=1.0.1" }
dcrypt-algorithms = { path = "../algorithms", version = "=1.0.1" }
dcrypt-kem = { path = "../kem", version = "=1.0.1" }
dcrypt-sign = { path = "../sign", version = "=1.0.1" }
zeroize = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
rand_chacha = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hybrid_kem"
harness = false

[[bench]]
name = "hybrid_sign"
harness = false

[package.metadata.release]
publish = true

