[package]
name = "dcrypt-kem"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Key Encapsulation Mechanisms for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = true

[features]
default = ["std"]
std = [
    "dcrypt-api/std", 
    "dcrypt-common/std", 
    "dcrypt-internal/std",
    "alloc"
]
no_std = [
    "dcrypt-api/no_std", 
    "dcrypt-common/no_std", 
    "dcrypt-internal/no_std",
    "alloc"
]
alloc = []
serde = [
    "dep:serde", 
    "dcrypt-api/serde", 
    "dcrypt-common/serde"
]

traditional = []  # Feature flag for traditional KEMs (ECDH, RSA, etc.)
post-quantum = [] # Feature flag for post-quantum KEMs (Kyber, McEliece, etc.)

[dependencies]
dcrypt-api = { path = "../api", version = "=1.0.0", default-features = false }
dcrypt-common = { path = "../common", version = "=1.0.0", default-features = false }
dcrypt-internal = { path = "../internal", version = "=1.0.0", default-features = false }
dcrypt-params = { path = "../params", version = "=1.0.0" }
dcrypt-algorithms = { path = "../algorithms", version = "=1.0.0" }
zeroize = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }
subtle = { version = "2.6.1", default-features = false }

[dev-dependencies]
rand_chacha = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kyber"
harness = false

[[bench]]
name = "ecdh_p256"
harness = false

[[bench]]
name = "ecdh_p384"
harness = false

[[bench]]
name = "ecdh_p521"
harness = false

[[bench]]
name = "ecdh_k256"
harness = false

[[bench]]
name = "ecdh_b283k"
harness = false

[[bench]]
name = "ecdh_comparison"
harness = false

[package.metadata.release]
publish = true
