[package]
name = "dcrypt-sign"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Digital Signature Schemes for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = true


[features]
trace = []
default = ["std"]
std = [
    "dcrypt-api/std", 
    "dcrypt-common/std", 
    "dcrypt-internal/std"
]
no_std = [
    "dcrypt-api/no_std", 
    "dcrypt-common/no_std", 
    "dcrypt-internal/no_std"
]
serde = [
    "dep:serde", 
    "dcrypt-api/serde", 
    "dcrypt-common/serde"
]

traditional = []  # Feature flag for traditional signatures (ECDSA, EdDSA, RSA, etc.)
post-quantum = [] # Feature flag for post-quantum signatures (Dilithium, Falcon, etc.)

[dependencies]
dcrypt-api = { path = "../api", version = "=1.1.0", default-features = false }
dcrypt-common = { path = "../common", version = "=1.1.0", default-features = false }
dcrypt-internal = { path = "../internal", version = "=1.1.0", default-features = false }
dcrypt-params = { path = "../params", version = "=1.1.0" }
dcrypt-algorithms = { path = "../algorithms", version = "=1.1.0" }
zeroize = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }
subtle = "2.5"

[dev-dependencies]
rand_chacha = { workspace = true }
hex = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dilithium"
harness = false

[package.metadata.release]
publish = true
