[package]
name = "dcrypt-symmetric"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Symmetric encryption algorithms for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = true

[features]
default = ["std"]
std = [
    "dcrypt-api/std", 
    "dcrypt-common/std", 
    "dcrypt-internal/std"
]
no_std = [
    "dcrypt-api/no_std", 
    "dcrypt-common/no_std", 
    "dcrypt-internal/no_std"
]
serde = [
    "dep:serde", 
    "dcrypt-api/serde", 
    "dcrypt-common/serde"
]

[dependencies]
dcrypt-api = { path = "../api", version = "=1.0.1", default-features = false }
dcrypt-common = { path = "../common", version = "=1.0.1", default-features = false }
dcrypt-internal = { path = "../internal", version = "=1.0.1", default-features = false }
dcrypt-params = { path = "../params", version = "=1.0.1" }
dcrypt-algorithms = { path = "../algorithms", version = "=1.0.1" }
zeroize = { workspace = true }
serde = { workspace = true, optional = true }
base64 = "0.13"
hmac = "0.12"
pbkdf2 = "0.11"
sha2 = "0.10"
rand = { workspace = true }
hkdf = "0.12"  # Add this missing dependency
byteorder = "1.4"  # Make sure this is included 
subtle = "2.4"   # Make sure constant-time comparison is available

[dev-dependencies]

[package.metadata.release]
publish = true
