[package]
name = "dcrypt-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Utilities and helpers for the dcrypt library"
repository.workspace = true
license.workspace = true
publish = true

[features]
default = ["std"]
std = [
    "dcrypt-api/std", 
    "dcrypt-common/std", 
    "dcrypt-internal/std"
]
no_std = ["alloc",  # no_std typically needs alloc for Vec, String, etc.
    "dcrypt-api/no_std", 
    "dcrypt-common/no_std", 
    "dcrypt-internal/no_std"
]
alloc = []  # Feature for allocation support in no_std environments

[dependencies]
dcrypt-api = { path = "../api", version = "=1.0.0" }
dcrypt-common = { path = "../common", version = "=1.0.0" }
dcrypt-internal = { path = "../internal", version = "=1.0.0" }
zeroize = { workspace = true }
rand = { workspace = true }
hex = "0.4.3"
base64 = "0.22.1" 

[package.metadata.release]
publish = true
